lesson3/styles/small.css
/* font-family: 'IBM Plex Sans', sans-serif;
font-family: 'IBM Plex Sans Condensed', sans-serif; */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  
}
body {
  font-family: 'IBM Plex Sans Condensed', sans-serif;
  font-size: 1rem;
  /* line-height: 1.5; */
  color: #333;
  background: white;
}
h1,
h2,
h3 {
  font-family: "IBM Plex Sans", sans-serif;
 }
h3 {
  padding-left: 2rem;
}

/* body {
    box-sizing: border-box;
} */
/* main.target {
    width: 100%;
     background-color: #c4eef2;
  align-content: center;
} */
article h2 {
  background-color: white;
  padding: 0 .5rem;
 
}


main {
  background-color: #c4eef2;
 }

 header  {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
   padding: 0.5rem;
  color: white;
  text-align: center;
  background-color: #025159;
}


nav {
  /* display: block; */
  display: flex;
  flex-direction: column;
  flex: 1 1 auto;
  margin: 0;
  padding: 0;
  background-color: #a67558fc;
  margin: 0 auto;
  width: 100%;
  box-shadow: 0 5px 5px #000000;
}
nav ul {
    display: flex;
  flex-flow: column;
  flex: 1 1 auto;
  justify-content: center;
  list-style-type: none;
}

nav ul li a {
  color: #ffff;
  font-weight: 800;
  text-align: center;
  padding: 0.65rem;
  text-decoration: none;
  font-size: 1rem;
  box-shadow: 0 5px 5px #000000;
  display: flex;
  justify-content: center;
}
nav ul li.active a {
  background-color:#a675584d;
  color: #025159;
  font-weight: 800;
}
li {
    width: 100%;
}
nav a:hover {
  background-color: #c4eef2;
  color: #025159;
}
nav a:active {
  color: #c4eef2;
}
main {
    margin: 0 auto;
  width: 100%;
  /* align-content: center;
  justify-content: center; */
  }
 
main h1 {
    grid-column-start: 1;
        grid-row-start: 1;
        contain: content;
    height: 2rem;
    background-color: #7ab8bf;
    text-align: center;
    margin-top: .5rem;
}
/* home page css */
article:nth-of-type(2) {
    display: block;
  grid-column-start: 1;
  grid-row-start: auto;
  margin: 5rem 1rem;
  padding: 1rem;
   background-color: #7ab8bf;
  }
article:nth-of-type(3) {
  display: block;
   margin: 2rem 1rem;
  padding: 1rem;
  background-color: #7ab8bf;
}
article:nth-of-type(1) {
    grid-column-start: 1;
    grid-row-start: 1;
  margin: 5rem 1rem;
  border: 1px solid rgb(0, 0, 0);
  padding: 1rem;
  background-color: #7ab8bf;
  box-shadow: 0 2px 2px gray;
}
section.picture {
  display: block;
    background-color: white;
  object-fit: cover;
  box-shadow: 0 2px 2px gray;
  margin: 2rem 1rem;
}



footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #000000;
    color: white;
   }


div.logo-box {
    /* display: block;  */
    grid-column-start: 1;
  } 

  div.design.h3 {
    height: 1rem;
  }
div.color-box {
    display: block; 
  display: flex;
    /* padding-left: 5rem; */
    /* width: 7rem; */
    
  flex-direction: row; 
    font-size: 1rem;
 
}

.item:nth-of-type(1) {
  padding: 1rem;
  color: white;
  font-weight: 800;
  width: 5rem;
  background-color: #025159;
  box-shadow: 0 0.15px 1px gray;
}
.item:nth-of-type(2) {
  padding: 1rem;
  color: white;
  font-weight: 800;
  width: 5rem;
  background-color: #7ab8bf;
  box-shadow: 0 0.15px 1px gray;
}
.item:nth-of-type(3) {
  padding: 1rem;
  color: #025159;
  font-weight: 800;
  width: 5rem;
  background-color: #c4eef2;
  box-shadow: 0 0.15px 1px gray;
}
.item:nth-of-type(4) {
  padding: 1rem;
  color: white;
  font-weight: 800;
  width: 5rem;
  background-color: #a67458;
  box-shadow: 0 0.15px 1px gray;
}

section.typography h3 {
    background-color: #7ab8bf;
}
div.color {
  padding-left: 1rem;
}
 
div h3.color {
    background-color: #7ab8bf;

    
} 
.color h3 {
    grid-column-start: 1;
    /* grid-row-start: 1; */
    /* margin-top: 3rem; */
}

div.persona-1 {
    grid-column-start: 1;
    /* grid-row-start: 1; */
    /* grid-column-end: 2; */
    padding: 1rem;
    background-color: white;
   
   
}
div.persona-2 {
    grid-column-start: 1;
    /* grid-row-start: 2; */
      padding: 1rem;
  background-color: white;
}
.persona-p1 {
  width: 15rem;
  padding: 0.5rem;
  background-color: white;
}
.persona-p2 {
  width: 15rem;
  padding: 0.5rem;
  background-color: white;
}
/* .grid-container {
  padding-left: 100rem;
} */

img:nth-of-type(3) {
  grid-row-start: 3;
  grid-column-end: 4;
}
img:nth-of-type(4) {
  grid-column-start: 1;
}

